<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragSavedChaptersRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.fragments.settings.SavedChaptersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSavedGita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSKalashOne"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/kalash"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintEnd_toStartOf="@id/mtvSGitaName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvSGitaName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shri_bhagavad_gita"
                android:textAlignment="center"
                android:textSize="@dimen/_18sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:fontFamily="@font/sniglet_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorOrange"
                app:layout_constraintEnd_toStartOf="@id/ivSKalashTwo"
                app:layout_constraintStart_toEndOf="@id/ivSKalashOne"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSKalashTwo"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/kalash"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/mtvSGitaName"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSSettings"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/chakra"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintStart_toEndOf="@id/ivSKalashTwo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvSChapters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saved_chapters_tag"
            android:textSize="@dimen/_18ssp"
            android:padding="@dimen/_4sdp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/sniglet_regular"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/clSavedGita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSavedChapters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/mtvSChapters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/rv_chapters_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/savedChaptersShimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/rvSavedChapters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shimmer_duration="800">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/shimmer_iv_chapters"/>
                <include layout="@layout/shimmer_iv_chapters"/>
                <include layout="@layout/shimmer_iv_chapters"/>
                <include layout="@layout/shimmer_iv_chapters"/>
                <include layout="@layout/shimmer_iv_chapters"/>
                <include layout="@layout/shimmer_iv_chapters"/>
                <include layout="@layout/shimmer_iv_chapters"/>
                <include layout="@layout/shimmer_iv_chapters"/>

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvNoSChapters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_chapters_saved"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorRed"
            android:fontFamily="@font/sniglet_regular"
            android:includeFontPadding="false"
            android:layout_marginHorizontal="@dimen/_6sdp"
            app:layout_constraintTop_toBottomOf="@id/mtvSChapters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>