<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragSettingRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSettingGita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSetKalashOne"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/kalash"
            android:layout_margin="@dimen/_4sdp"
            app:layout_constraintEnd_toStartOf="@id/mtvSetGitaName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvSetGitaName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shri_bhagavad_gita"
            android:textAlignment="center"
            android:textSize="@dimen/_18sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:fontFamily="@font/sniglet_regular"
            android:includeFontPadding="false"
            android:textColor="@color/colorOrange"
            app:layout_constraintEnd_toStartOf="@id/ivSetKalashTwo"
            app:layout_constraintStart_toEndOf="@id/ivSetKalashOne"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSetKalashTwo"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/kalash"
            android:layout_margin="@dimen/_4sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/mtvSetGitaName"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSettings"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/chakra"
            android:layout_margin="@dimen/_4sdp"
            app:layout_constraintStart_toEndOf="@id/ivSetKalashTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvRootSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_60sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/clSettingGita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="@dimen/_1sdp"
        app:strokeColor="@color/colorOrange"
        app:cardBackgroundColor="@color/colorWhite">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSavedChapters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSSaveText"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/save_texts"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvSSavedChapters"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_chapters_tag"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/colorOrange"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:fontFamily="@font/sniglet_regular"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toEndOf="@id/ivSSaveText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSChapterArrowR"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="@+id/mtvSSavedChapters"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mtvSSavedChapters" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSavedVerses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/clSavedChapters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSSave"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/save"
                    android:layout_marginVertical="@dimen/_4sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvSSavedVerses"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_verses_tag"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/colorOrange"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:fontFamily="@font/sniglet_regular"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toEndOf="@id/ivSSave"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSVersesArrowR"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="@+id/mtvSSavedVerses"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mtvSSavedVerses" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivOne"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/verse_top_right"
        android:scaleType="centerInside"
        android:alpha="0.2"
        app:layout_constraintTop_toBottomOf="@id/mcvRootSettings"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/transparent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTwo"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        android:src="@drawable/krsna"
        android:scaleType="centerInside"
        android:alpha="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"/>

</androidx.constraintlayout.widget.ConstraintLayout>