<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.fragments.home.HomeFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/clGita"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

           <androidx.appcompat.widget.AppCompatImageView
               android:id="@+id/ivKalashOne"
               android:layout_width="@dimen/_20sdp"
               android:layout_height="@dimen/_20sdp"
               android:src="@drawable/kalash"
               android:layout_margin="@dimen/_4sdp"
               app:layout_constraintEnd_toStartOf="@id/mtvGitaName"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"/>

           <com.google.android.material.textview.MaterialTextView
               android:id="@+id/mtvGitaName"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/shri_bhagavad_gita"
               android:textAlignment="center"
               android:textSize="@dimen/_18sdp"
               android:layout_marginHorizontal="@dimen/_10sdp"
               android:fontFamily="@font/sniglet_regular"
               android:includeFontPadding="false"
               android:textColor="@color/colorOrange"
               app:layout_constraintEnd_toStartOf="@id/ivKalashTwo"
               app:layout_constraintStart_toEndOf="@id/ivKalashOne"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"/>

           <androidx.appcompat.widget.AppCompatImageView
               android:id="@+id/ivKalashTwo"
               android:layout_width="@dimen/_20sdp"
               android:layout_height="@dimen/_20sdp"
               android:src="@drawable/kalash"
               android:layout_margin="@dimen/_4sdp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toEndOf="@id/mtvGitaName"
               app:layout_constraintBottom_toBottomOf="parent"/>

           <androidx.appcompat.widget.AppCompatImageView
               android:id="@+id/ivSettings"
               android:layout_width="@dimen/_30sdp"
               android:layout_height="@dimen/_30sdp"
               android:src="@drawable/chakra"
               android:layout_margin="@dimen/_4sdp"
               app:layout_constraintStart_toEndOf="@id/ivKalashTwo"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

       </androidx.constraintlayout.widget.ConstraintLayout>

       <com.google.android.material.card.MaterialCardView
           android:id="@+id/mcv"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardCornerRadius="@dimen/_12sdp"
           app:cardElevation="@dimen/_4sdp"
           app:cardUseCompatPadding="true"
           android:layout_marginHorizontal="@dimen/_6sdp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/clGita">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <androidx.appcompat.widget.AppCompatImageView
                   android:id="@+id/ivShriRK"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_120sdp"
                   android:src="@drawable/rk"
                   android:scaleType="centerCrop"
                   android:alpha="0.4"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"/>

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/mtvShowVerse"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Verse Of Day"
                   android:textSize="@dimen/_14sdp"
                   android:padding="@dimen/_2sdp"
                   android:textAlignment="center"
                   android:visibility="gone"
                   android:textColor="@color/colorRed"
                   android:fontFamily="@font/sniglet_regular"
                   android:includeFontPadding="false"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintBottom_toTopOf="@id/mtvVerseOfDay"
                   tools:ignore="HardCodedText"/>

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/mtvVerseOfDay"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="@dimen/_4sdp"
                   android:fontFamily="@font/sniglet_regular"
                   android:includeFontPadding="false"
                   android:padding="@dimen/_2sdp"
                   android:textAlignment="center"
                   android:visibility="gone"
                   android:textColor="@color/colorGrey"
                   android:textSize="@dimen/_12sdp"
                   app:layout_constraintBottom_toBottomOf="@+id/ivShriRK"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/mtvShowVerse" />

           </androidx.constraintlayout.widget.ConstraintLayout>

       </com.google.android.material.card.MaterialCardView>

       <com.google.android.material.textview.MaterialTextView
           android:id="@+id/mtvChapters"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/text_chapters_tag"
           android:textSize="@dimen/_18ssp"
           android:padding="@dimen/_4sdp"
           android:textColor="@color/colorBlack"
           android:fontFamily="@font/sniglet_regular"
           android:layout_marginHorizontal="@dimen/_6sdp"
           android:includeFontPadding="false"
           app:layout_constraintTop_toBottomOf="@id/mcv"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/rvChapters"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintTop_toBottomOf="@id/mtvChapters"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           tools:listitem="@layout/rv_chapters_item"
           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

       <com.facebook.shimmer.ShimmerFrameLayout
           android:id="@+id/homeShimmer"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:visibility="visible"
           android:orientation="vertical"
           app:layout_constraintTop_toBottomOf="@id/mtvChapters"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:shimmer_duration="800">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <include layout="@layout/shimmer_iv_chapters"/>
               <include layout="@layout/shimmer_iv_chapters"/>
               <include layout="@layout/shimmer_iv_chapters"/>
               <include layout="@layout/shimmer_iv_chapters"/>
               <include layout="@layout/shimmer_iv_chapters"/>
               <include layout="@layout/shimmer_iv_chapters"/>
               <include layout="@layout/shimmer_iv_chapters"/>
               <include layout="@layout/shimmer_iv_chapters"/>

           </LinearLayout>

       </com.facebook.shimmer.ShimmerFrameLayout>

       <com.google.android.material.textview.MaterialTextView
           android:id="@+id/mtvNoInternet"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/no_internet"
           android:visibility="gone"
           android:gravity="center"
           android:textSize="@dimen/_14sdp"
           android:textColor="@color/colorRed"
           android:fontFamily="@font/sniglet_regular"
           android:includeFontPadding="false"
           android:layout_marginHorizontal="@dimen/_6sdp"
           app:layout_constraintTop_toTopOf="@id/rvChapters"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"/>

   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>